solve-overflow-problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
 body {
   font-family: "Inter", sans-serif;
   background-color: #1c2430 !important;
+  scroll-behavior: smooth !important;
 }
 
 .font-franklin {
